Add ogpf library for graphing
Signed-off-by: Andre Mello <andre.tgmello@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
+###################
 # Compiled source #
 ###################
 *.o
 *.mod
 main
 
+#########
 # Tests #
 #########
 *.test
 
 
+########
 # Util #
 ########
 cr.sh
+demo.f90
+*.gp
